Fix alignment of input boxes, especially checkboxes.

--- a/kronolith/themes/default/dynamic/screen.css
+++ b/kronolith/themes/default/dynamic/screen.css
@@ -115,6 +115,9 @@ html, body {
 .kronolithDialog div {
     margin-bottom: 5px;
 }
+.kronolithDialog input {
+    vertical-align: middle;
+}
 .kronolithDialog td {
     padding-right: 10px;
     vertical-align: top;
